--- a/src/app/views/admin/prevmeasures/prevmeasures/domaine/domaine.component.html
+++ b/src/app/views/admin/prevmeasures/prevmeasures/domaine/domaine.component.html
@@ -9,7 +9,7 @@
       <a href="">Afficher tous</a>
     </div>
     <div class="d-flex align-items-center justify-content-between mb-4">
-      <button type="button" class="btn btn-primary m-2">Ajouter domaine</button>
+      <button type="button" class="btn btn-primary m-2" (click)="openDialog()">Ajouter domaine</button>
     </div>
 
 
