--- a/src/app/views/admin/prevmeasures/prevmeasures/domaine/domaine.component.html
+++ b/src/app/views/admin/prevmeasures/prevmeasures/domaine/domaine.component.html
@@ -39,7 +39,7 @@
               <td>
                 <div class="btn-group" role="group">
                   <button type="button" class="btn btn-outline-primary">Supprimer</button>
-                  <button type="button" class="btn btn-outline-primary">Modifier</button>
+                  <button type="button" class="btn btn-outline-primary" (click)="openDialogupdate(item.id)" >Modifier</button>
                 </div>
               </td>
             </tr>
