--- a/src/app/views/admin/prevmeasures/prevmeasures/popup/popup.component.html
+++ b/src/app/views/admin/prevmeasures/prevmeasures/popup/popup.component.html
@@ -1,5 +1,6 @@
+
 <div class="bg-light rounded h-100 p-4">
-  <h6 class="mb-4">Basic Form {{obj}}</h6>
+  <h6 class="mb-4">Basic Form {{obj.titre}}</h6>
   <form [formGroup]="popForm">
     <div class="mb-3">
       <label for="titre" class="form-label">Titre</label>
