--- a/src/app/views/admin/prevmeasures/prevmeasures/domaine-id-risques/domaine-id-risques.component.html
+++ b/src/app/views/admin/prevmeasures/prevmeasures/domaine-id-risques/domaine-id-risques.component.html
@@ -35,7 +35,7 @@
       <a href="">Afficher tous</a>
     </div>
     <div class="d-flex align-items-center justify-content-between mb-4">
-      <button type="button" class="btn btn-primary m-2">Ajouter risque</button>
+      <button type="button" class="btn btn-primary m-2" (click)="openDialog(obj.id)">Ajouter risque</button>
     </div>
 
 
@@ -65,7 +65,7 @@
               <td>
                 <div class="btn-group" role="group">
                   <button type="button" class="btn btn-outline-primary">Supprimer</button>
-                  <button type="button" class="btn btn-outline-primary">Modifier</button>
+                  <button type="button" class="btn btn-outline-primary"(click)="openDialogupdate(item.id)">Modifier</button>
                 </div>
               </td>
             </tr>
