--- a/src/app/views/admin/prevmeasures/prevmeasures/domaine-id-risques/domaine-id-risques.component.html
+++ b/src/app/views/admin/prevmeasures/prevmeasures/domaine-id-risques/domaine-id-risques.component.html
@@ -64,7 +64,7 @@
               </td>
               <td>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-outline-primary">Supprimer</button>
+                  <button type="button" class="btn btn-outline-primary"(click)="delete(item.domaine_id,item.id)">Supprimer</button>
                   <button type="button" class="btn btn-outline-primary" (click)="getdata(item.id,item.titre,item.description,item.domaine_id)"data-toggle="modal" data-target="#exampleModal" >Modifier</button>
                 </div>
               </td>
