--- a/src/app/views/admin/prevmeasures/prevmeasures/domaine/domaine.component.html
+++ b/src/app/views/admin/prevmeasures/prevmeasures/domaine/domaine.component.html
@@ -38,7 +38,7 @@
               </td>
               <td>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-outline-primary">Supprimer</button>
+                  <button type="button" class="btn btn-outline-primary"(click)="delete(item.id)">Supprimer</button>
                   <button type="button" class="btn btn-outline-primary" (click)="getdata(item.id,item.titre,item.description)"data-toggle="modal" data-target="#exampleModal" >Modifier</button>
                 </div>
               </td>
