--- a/src/app/views/admin/prevmeasures/prevmeasures/risque-id-mesures/risque-id-mesures.component.html
+++ b/src/app/views/admin/prevmeasures/prevmeasures/risque-id-mesures/risque-id-mesures.component.html
@@ -63,7 +63,7 @@
               <td><button type="button" class="btn btn-sm btn-primary" (click)="goToDetails(item.id)">Details</button></td>
               <td>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-outline-primary">Supprimer</button>
+                  <button type="button" class="btn btn-outline-primary"(click)="delete(item.risque_id,item.id)">Supprimer</button>
                   <button type="button" class="btn btn-outline-primary" (click)="getdata(item.id,item.titre,item.description,item.risque_id)"data-toggle="modal" data-target="#exampleModal" >Modifier</button>
                 </div>
               </td>
