--- a/src/app/layouts/admin/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin/admin-layout/admin-layout.component.html
@@ -12,7 +12,7 @@
   <!-- Sidebar Start -->
   <div class="sidebar pe-4 pb-3">
     <nav class="navbar bg-light navbar-light">
-      <a routerLink="/admin/dashboard" class="navbar-brand mx-4 mb-3">
+      <a href="admin/dashboard" class="navbar-brand mx-4 mb-3">
         <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>ARRU</h3>
       </a>
       <div class="d-flex align-items-center ms-4 mb-4">
@@ -83,7 +83,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
             <a href="#" class="dropdown-item">Settings</a>
-            <a href="#" class="dropdown-item">Log Out</a>
+            <a (click)="submit()" class="dropdown-item">Log Out</a>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
       <div class="bg-light rounded-top p-4">
         <div class="row">
           <div class="col-12 col-sm-6 text-center text-sm-start">
-            &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+            &copy; <a href="admin/dashboard">Your Site Name</a>, All Right Reserved.
           </div>
         </div>
       </div>
